--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.16.3)
-project(tdd VERSION 0.1.0 LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.12.0)
+project(catch2-cmake-example)
 
 add_subdirectory(src)
 add_subdirectory(tests)
